fixed layout on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -247,14 +247,13 @@ main{
 }
 .gallery-section{
     padding:120px 0 80px;
-    img{
-        // border-radius: .8rem;
-    }
+   
     .grid-container{
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         @media (max-width:768px) {
             
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         }
         //  rowga
         .gallery-left{
@@ -291,7 +290,7 @@ main{
      .grid-container2 {
         margin-top: 0.5rem;
         display: grid;
-        grid-template-columns: repeat(3, 1fr); // Default to 3 columns
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
         gap: 0.5rem;
     
         img {
@@ -308,7 +307,7 @@ main{
             }
     
             &:last-child {
-                // border-radius: 1rem;
+              
                 background: $color-black;
                 color: white;
                 display: flex;
@@ -337,7 +336,8 @@ main{
     
         // Media query for screens 557px or less
         @media (max-width: 557px) {
-            grid-template-columns: 1fr; // Change to 1 column per row
+            display: flex;
+            flex-direction: column;
         }
     }
  }
